penambahan file foto, foto profile, posisi, about me, dan project-1(CineVerse)

--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css" />
 
     <!-- My CSS -->
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="index-style.css" />
   </head>
+
   <body id="home">
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark shadow-sm fixed-top" style="background-color: #1f2544">
@@ -42,9 +43,9 @@
 
     <!-- Jumbotron -->
     <section class="jumbotron text-center">
-      <img src="img/Syehan.jpg" alt="Syehan Fariz Gustomo" width="150" class="rounded-circle" />
+      <img src="img/Self-Portrait.jpg" alt="Syehan Fariz Gustomo" width="150" class="rounded-circle" />
       <h1 class="display-4">Syehan Fariz Gustomo</h1>
-      <p class="lead">Web Designer | Machine Learning</p>
+      <p class="lead">Web Designer | UI/UX</p>
       <!-- getwaves.io -->
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
         <path
@@ -67,10 +68,16 @@
         </div>
         <div class="row justify-content-center fs-5 text-center mt-2">
           <div class="col-md-4">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam labore nisi modi, et molestias eveniet blanditiis distinctio eligendi iure quidem.</p>
+            <p>
+              As someone who enjoys designing UI/UX, HTML, Figma, I find some satisfaction in the creativity process of making visually appealing and highly functional user interfaces. I'm interested in how design elements influence user
+              behavior and engagement.
+            </p>
           </div>
           <div class="col-md-4">
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci natus magnam, sequi amet laborum in.</p>
+            <p>
+              I'm passionate about bringing designs to life through HTML and leveraging a frame work, such as Bootstrap to make web more responsive. I'm also interested in database development and I'm usually using MySql to develop and
+              build database.
+            </p>
           </div>
         </div>
       </div>
@@ -94,17 +101,14 @@
             <hr />
           </div>
         </div>
-        <div class="row-mb-3">
-          <div class="col-md-6">
+        <div class="row justify-content-center">
+          <div class="col-md-8">
             <div class="card">
-              <img src="..." class="card-img-top" alt="..." />
-              <!-- <img src="(directory path image)" class="card-img-top" alt="(Judul Image)" /> -->
+              <img src="img/CineVerse-Home.jpg" class="card-img-top" alt="Project 1" />
               <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                <!-- Untuk Button Project (belum mengarah kemanapun) -->
-                <!-- Bila ingin mengarahkan nya, href di isi file html untuk halaman baru -->
-                <a href="#" class="btn btn-primary">Go somewhere</a>
+                <h5 class="card-title">CineVerse</h5>
+                <p class="card-text">web application that provides the latest information regarding the latest films</p>
+                <a href="project_1.html#" class="btn btn-primary">Go somewhere</a>
               </div>
             </div>
           </div>
@@ -184,6 +188,7 @@
     </footer>
     <!-- Akhir Footer -->
 
+    <!-- Javascript Untuk Navbar -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script>
       document.addEventListener("DOMContentLoaded", function () {
@@ -200,6 +205,7 @@
       });
     </script>
 
+    <!-- Javascript untuk Contact Email -->
     <script>
       const scriptURL = "https://script.google.com/macros/s/AKfycbwrpr0pwf01K2IXzAmZgZZtU8_yu4cVylGlLyr2H8ISrz1vCX2vLpRD5BBi17lQGSFh/exec";
       const form = document.forms["contact-form-portfolio"];
