Updated apperance on Project_1 and link in Footer

--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
 
     <!-- Footer -->
     <footer class="text-white text-center pb-5" style="background-color: #474f7a">
-      <p>Created by <i class="bi bi-c-circle"></i> <a href="https://www.instagram.com/syehan_fariz/" class="text-white fw-bold">Syehan Fariz Gustomo</a></p>
+      <p>Created by <i class="bi bi-c-circle"></i> <a href="https://github.com/HanTw0" class="text-white fw-bold">Syehan Fariz Gustomo</a></p>
     </footer>
     <!-- Akhir Footer -->
 
