--- a/project_1.html
+++ b/project_1.html
@@ -45,6 +45,14 @@
           </div>
         </div>
       </div>
+      <!-- getwaves.io -->
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+        <path
+          fill="#818FB4"
+          fill-opacity="1"
+          d="M0,128L48,154.7C96,181,192,235,288,240C384,245,480,203,576,197.3C672,192,768,224,864,213.3C960,203,1056,149,1152,138.7C1248,128,1344,160,1392,176L1440,192L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"
+        ></path>
+      </svg>
     </section>
     <!-- End of About Project -->
 
@@ -92,12 +100,20 @@
           </button>
         </div>
       </div>
+      <!-- getwaves.io -->
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+        <path
+          fill="#474f7a"
+          fill-opacity="1"
+          d="M0,64L34.3,90.7C68.6,117,137,171,206,202.7C274.3,235,343,245,411,213.3C480,181,549,107,617,101.3C685.7,96,754,160,823,170.7C891.4,181,960,139,1029,138.7C1097.1,139,1166,181,1234,181.3C1302.9,181,1371,139,1406,117.3L1440,96L1440,320L1405.7,320C1371.4,320,1303,320,1234,320C1165.7,320,1097,320,1029,320C960,320,891,320,823,320C754.3,320,686,320,617,320C548.6,320,480,320,411,320C342.9,320,274,320,206,320C137.1,320,69,320,34,320L0,320Z"
+        ></path>
+      </svg>
     </section>
     <!-- End of Features -->
 
     <!-- Footer -->
-    <footer class="text-white text-center pb-5 pt-3" style="background-color: #474f7a">
-      <p>Created by <i class="bi bi-c-circle"></i> <a href="https://www.instagram.com/syehan_fariz/" class="text-white fw-bold">Syehan Fariz Gustomo</a></p>
+    <footer class="text-white text-center pb-5 pt-1" style="background-color: #474f7a">
+      <p>Created by <i class="bi bi-c-circle"></i> <a href="https://github.com/HanTw0" class="text-white fw-bold">Syehan Fariz Gustomo</a></p>
     </footer>
     <!-- End of Footer -->
 
